--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <style media="screen">
       body{
         margin: 0;
+        border: 10px solid #192b36;
       }
 
       img{
@@ -18,6 +19,6 @@
     <img src="header.jpg" alt="">
     <img src="hero.jpg" alt="">
     <img src="acustica.jpg" alt="">
-    
+
   </body>
 </html>
